    (Alexander Bergmann, cmb)

- Standard:
  . Don't force rebuild of symbol table, when populating $http_response_header
    variable by the HTTP stream wrapper. (Dmitry)
  . Fixed bug #80290 (Double free when ASSERT_CALLBACK is used with a dynamic
    message). (Nikita)
  . Fixed bug #80266 (parse_url silently drops port number 0). (cmb, Nikita)

29 Oct 2020, PHP 8.0.0RC3

- Core:
  . Fixed bug #8055 (Abstract trait methods returning "self" cannot be
    fulfilled by traits). (Nikita)
  . Fixed bug #80280 (ADD_EXTENSION_DEP() fails for ext/standard and ext/date).
    (cmb)
  . Fixed bug #80258 (Windows Deduplication Enabled, randon permission errors).
    (cmb)

- COM:
  . Fixed bug #62474 (com_event_sink crashes on certain arguments). (cmb)

- DOM:
  . Fixed bug #80268 (loadHTML() truncates at NUL bytes). (cmb)

- IMAP:
  . Fixed bug #76618 (segfault on imap_reopen). (girgias)
  . Fixed bug #80239 (imap_rfc822_write_address() leaks memory). (cmb)
  . Fixed minor regression caused by fixing bug #80220. (cmb)
  . Fixed bug #80242 (imap_mail_compose() segfaults for multipart with rfc822).
    (cmb)

- Opcache:
  . Fixed bug #80255 (Opcache bug (bad condition result) in 8.0.0rc1). (Nikita)

- Standard:
  . Fixed bug #80256 (file_get_contents strip first line with chunked encoding
    redirect). (Nikita)

15 Oct 2020, PHP 8.0.0RC2

- Core:
  . Fixed bug #80225 (broken namespace usage in eval code). (Nikita)

- Curl:
  . Fixed bug #80121 (Null pointer deref if CurlHandle directly instantiated).
    (Nikita)

- IMAP:
  . Fixed bug #80213 (imap_mail_compose() segfaults on certain $bodies). (cmb)
  . Fixed bug #80215 (imap_mail_compose() may modify by-val parameters). (cmb)
  . Fixed bug #80220 (imap_mail_compose() may leak memory). (cmb)
  . Fixed bug #80223 (imap_mail_compose() leaks envelope on malformed bodies).
    (cmb)
  . Fixed bug #80216 (imap_mail_compose() does not validate types/encodings).
    (cmb)