@@ -10,7 +10,7 @@ class MyPhpToken1 extends PhpToken {
 }
 
 try {
-    var_dump(MyPhpToken1::getAll("<?php foo"));
+    var_dump(MyPhpToken1::tokenize("<?php foo"));
 } catch (Error $e) {
     echo $e->getMessage(), "\n";
 }
@@ -19,7 +19,7 @@ abstract class MyPhpToken2 extends PhpToken {
 }
 
 try {
-    var_dump(MyPhpToken2::getAll("<?php foo"));
+    var_dump(MyPhpToken2::tokenize("<?php foo"));
 } catch (Error $e) {
     echo $e->getMessage(), "\n";
 }
