@@ -12,7 +12,7 @@ namespace\Foo
 Foo \ Bar
 CODE;
 
-foreach (PhpToken::getAll($code) as $token) {
+foreach (PhpToken::tokenize($code) as $token) {
     echo "{$token->getTokenName()}: \"$token->text\"\n";
 }
 
