@@ -9,7 +9,7 @@ function token_name(int $id): string {}
 class PhpToken implements Stringable
 {
     /** @return static[] */
-    public static function getAll(string $code, int $flags = 0): array {}
+    public static function tokenize(string $code, int $flags = 0): array {}
 
     final public function __construct(int $id, string $text, int $line = -1, int $pos = -1) {}
 
